// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SearchBar Snapshots should match snapshot with custom placeholder 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#FFFFFF",
      "borderColor": "#F5EFE3",
      "borderRadius": 16,
      "borderWidth": 2,
      "flexDirection": "row",
      "marginBottom": 16,
      "marginHorizontal": 16,
      "paddingHorizontal": 16,
    }
  }
>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight={20}
    bbWidth={20}
    fill="none"
    focusable={false}
    height={20}
    meetOrSlice={0}
    minX={0}
    minY={0}
    stroke="#9B9B9B"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth={2}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "marginRight": 8,
        },
        {
          "flex": 0,
          "height": 20,
          "width": 20,
        },
      ]
    }
    vbHeight={24}
    vbWidth={24}
    width={20}
    xmlns="http://www.w3.org/2000/svg"
  >
    <RNSVGGroup
      fill={null}
      propList={
        [
          "fill",
          "stroke",
          "strokeWidth",
          "strokeLinecap",
          "strokeLinejoin",
        ]
      }
      stroke={
        {
          "payload": 4288387995,
          "type": 0,
        }
      }
      strokeLinecap={1}
      strokeLinejoin={1}
      strokeWidth={2}
    >
      <RNSVGPath
        d="m21 21-4.34-4.34"
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 4288387995,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
      />
      <RNSVGCircle
        cx="11"
        cy="11"
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        r="8"
        stroke={
          {
            "payload": 4288387995,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
      />
    </RNSVGGroup>
  </RNSVGSvgView>
  <TextInput
    autoCapitalize="none"
    autoCorrect={false}
    onChangeText={[MockFunction]}
    placeholder="Custom placeholder"
    placeholderTextColor="#9B9B9B"
    style={
      {
        "color": "#2B2B2B",
        "flex": 1,
        "fontSize": 16,
        "paddingVertical": 16,
      }
    }
    value=""
  />
</View>
`;

exports[`SearchBar Snapshots should match snapshot with empty value 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#FFFFFF",
      "borderColor": "#F5EFE3",
      "borderRadius": 16,
      "borderWidth": 2,
      "flexDirection": "row",
      "marginBottom": 16,
      "marginHorizontal": 16,
      "paddingHorizontal": 16,
    }
  }
>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight={20}
    bbWidth={20}
    fill="none"
    focusable={false}
    height={20}
    meetOrSlice={0}
    minX={0}
    minY={0}
    stroke="#9B9B9B"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth={2}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "marginRight": 8,
        },
        {
          "flex": 0,
          "height": 20,
          "width": 20,
        },
      ]
    }
    vbHeight={24}
    vbWidth={24}
    width={20}
    xmlns="http://www.w3.org/2000/svg"
  >
    <RNSVGGroup
      fill={null}
      propList={
        [
          "fill",
          "stroke",
          "strokeWidth",
          "strokeLinecap",
          "strokeLinejoin",
        ]
      }
      stroke={
        {
          "payload": 4288387995,
          "type": 0,
        }
      }
      strokeLinecap={1}
      strokeLinejoin={1}
      strokeWidth={2}
    >
      <RNSVGPath
        d="m21 21-4.34-4.34"
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 4288387995,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
      />
      <RNSVGCircle
        cx="11"
        cy="11"
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        r="8"
        stroke={
          {
            "payload": 4288387995,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
      />
    </RNSVGGroup>
  </RNSVGSvgView>
  <TextInput
    autoCapitalize="none"
    autoCorrect={false}
    onChangeText={[MockFunction]}
    placeholder="Search medical terms..."
    placeholderTextColor="#9B9B9B"
    style={
      {
        "color": "#2B2B2B",
        "flex": 1,
        "fontSize": 16,
        "paddingVertical": 16,
      }
    }
    value=""
  />
</View>
`;

exports[`SearchBar Snapshots should match snapshot with filled value 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#FFFFFF",
      "borderColor": "#F5EFE3",
      "borderRadius": 16,
      "borderWidth": 2,
      "flexDirection": "row",
      "marginBottom": 16,
      "marginHorizontal": 16,
      "paddingHorizontal": 16,
    }
  }
>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight={20}
    bbWidth={20}
    fill="none"
    focusable={false}
    height={20}
    meetOrSlice={0}
    minX={0}
    minY={0}
    stroke="#9B9B9B"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth={2}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "marginRight": 8,
        },
        {
          "flex": 0,
          "height": 20,
          "width": 20,
        },
      ]
    }
    vbHeight={24}
    vbWidth={24}
    width={20}
    xmlns="http://www.w3.org/2000/svg"
  >
    <RNSVGGroup
      fill={null}
      propList={
        [
          "fill",
          "stroke",
          "strokeWidth",
          "strokeLinecap",
          "strokeLinejoin",
        ]
      }
      stroke={
        {
          "payload": 4288387995,
          "type": 0,
        }
      }
      strokeLinecap={1}
      strokeLinejoin={1}
      strokeWidth={2}
    >
      <RNSVGPath
        d="m21 21-4.34-4.34"
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 4288387995,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
      />
      <RNSVGCircle
        cx="11"
        cy="11"
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        r="8"
        stroke={
          {
            "payload": 4288387995,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
      />
    </RNSVGGroup>
  </RNSVGSvgView>
  <TextInput
    autoCapitalize="none"
    autoCorrect={false}
    onChangeText={[MockFunction]}
    placeholder="Search medical terms..."
    placeholderTextColor="#9B9B9B"
    style={
      {
        "color": "#2B2B2B",
        "flex": 1,
        "fontSize": 16,
        "paddingVertical": 16,
      }
    }
    value="tachycardia"
  />
</View>
`;
